fix: remove hidden overflow on event track

--- a/styles/global.css
+++ b/styles/global.css
@@ -93,7 +93,8 @@
 html,
 body {
 	font-size: 12px;
-	font-family: 'Inter', sans-serif;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+		Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	background-color: rgb(207, 250, 254);
 	background-image: radial-gradient(
 			at 5% 33%,
